--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "simple-react-footer": "^1.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "express": "^4.18.2",
+    "react-icons": "^4.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
